# O.O.P

./: .flake8  .gitignore  README.md  pyproject.toml
src/: main.py  product.py
tests/: test_main.py  test_product.py
