[project]
name = "o-o-p"
version = "0.1.0"
description = ""
authors = [
    {name = "ilya_kim",email = "ilya-kim-1999@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "poetry-core (>=1.0.0)"
]

[tool.poetry]
name = "product-category-manager"
version = "0.1.0"
description = "Product and category management system"

[tool.poetry.dependencies]
python = ">=3.13"
pytest = "^7.0.0"
pytest-cov = "^4.0.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^22.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=./ --cov-report=html"
testpaths = ["tests"]